# projects

Inzynieria oprogramowania/project/: .gitignore  README.md  TEST.md  main.py
Inzynieria oprogramowania/project/back/: CoinFlipInstruction.py  InitializeDatabase.py  Instruction.py  RouletteInstruction.py  SlotsInstruction.py  User.py  UserManager.py
Inzynieria oprogramowania/project/front/: requirements.txt
Metody numeryczne/num1/: NUM1-w2iw3-FINAL.ipynb  metodaSiecznych.py  regulaFalsi.py
Metody numeryczne/num2/: MetodyNumeryczne2.cbp  MetodyNumeryczne2.depend  MetodyNumeryczne2.layout  funkcje.cpp  header.h  main.cpp
Metody numeryczne/num3/: Lagrange1-3.ipynb
Metody numeryczne/num4/: FINAL.ipynb
Metody numeryczne/num5/: horner.py  metNum5.ipynb
Podstawy przetwarzania duzych zbiorow danych/zadanie 4/: GOOGLE.csv  day_wise.csv  gdp.csv  medical_doctors.csv  nurses.csv  onion2.csv  pollution.csv  worldometer_data.csv
Podstawy przetwarzania duzych zbiorow danych/zadanie 4/.ipynb_checkpoints/: BIGdataProject-checkpoint.ipynb
Programowanie komponentowe/Zadanie1/: checkstyle2020.xml  pom.xml
Programowanie komponentowe/Zadanie11/Model/: sudokuboard
Programowanie komponentowe/Zadanie11b/: pom.xml
Programowanie komponentowe/Zadanie11b/Model/: checkstyle2020.xml
Programowanie komponentowe/Zadanie11b/View/: pom.xml
Programowanie komponentowe/Zadanie12/: README.md  pom.xml
Programowanie komponentowe/Zadanie12/Model/: pom.xml  sudokuboard
Programowanie komponentowe/Zadanie2/: pom.xml
Programowanie komponentowe/Zadanie6/: pom.xml
Programowanie komponentowe/Zadanie8/Model/: pom.xml  sudokuboard
Programowanie obiektowe/project/CinemaProject/: CMakeLists.txt
Programowanie obiektowe/project/CinemaProject/src/: main.cpp
Programowanie obiektowe/project/CinemaProject/src/Managers/: ClientManager.cpp  MovieManager.cpp  SeatsManager.cpp  TicketManager.cpp
Programowanie obiektowe/project/CinemaProject/src/model/: Client.cpp  ClientType.cpp  Movie.cpp  Normal.cpp  Seats.cpp  Senior.cpp  Student.cpp  Ticket.cpp
Programowanie obiektowe/project/CinemaProject/test/: ClientManagerTest.cpp  ClientTest.cpp  MovieManagerTest.cpp  MovieTest.cpp  SeatsManagerTest.cpp  SeatsTest.cpp  TicketManagerTest.cpp  TicketTest.cpp  master.cpp
Programowanie w jezyku Python/wb_kb_zad2/chase/: alive.csv  main.py  pos.json
Projektowanie hurtowni danych/kostka OLAP/: MultidimensionalProject1.sln
Projektowanie hurtowni danych/kostka OLAP/MultidimensionalProject1/: MultidimensionalProject1.database  MultidimensionalProject1.dwproj
Systemy operacyjne/zad5/: tablica.txt
Systemy operacyjne/zad5/producent_konsument/: konsument.sh  lib_producent_konsument_fifo_potoki_gniazda.sh  producent.sh  uruchom.sh
Systemy operacyjne/zad5/ucztujacy_filozofowie/: lib_uczta_filozofow.sh  uruchom.sh
Sztuczna Inteligencja i systemy ekspertowe/Zadanie 1/15java_FINAL/: pom.xml
Sztuczna Inteligencja i systemy ekspertowe/Zadanie 2/: LEARNandRESULT.ipynb  NN_Error_Distribution.xlsx  READandPREP.ipynb  final_weights.txt
Sztuczna Inteligencja i systemy ekspertowe/Zadanie 2/.ipynb_checkpoints/: LEARNandRESULT-checkpoint.ipynb  READandPREP-checkpoint.ipynb
Telekomunikacja i przetwarzanie sygnalow/Bechcinski_229840_Budzyn_229850_z1/Zad1/: Zad1.sln
Telekomunikacja i przetwarzanie sygnalow/Bechcinski_229840_Budzyn_229850_z2/Zad2 (receive)/: Zad2 (receive).cbp  Zad2 (receive).depend  Zad2 (receive).layout  main.cpp
Telekomunikacja i przetwarzanie sygnalow/Bechcinski_229840_Budzyn_229850_z2/Zad2 (send)/: Zad2 (send).cbp  Zad2 (send).depend  Zad2 (send).layout  main.cpp  sendTXT.txt
Telekomunikacja i przetwarzanie sygnalow/Bechcinski_229840_Budzyn_229850_z4/: AC.py  CA.py  main.py
Wizualizacja i raportowanie danych/Ćwiczenie_4_229850/: README.md  package-lock.json  package.json
(+148 files in other folders)
